--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-easy-grid": "^0.2.2",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.0",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-modal-datetime-picker": "^8.9.3",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
