--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@react-navigation/stack": "^5.1.1",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-animatable": "^1.3.3",
+    "react-native-collapsible": "^1.5.3",
     "react-native-dropdown-picker": "^3.6.5",
     "react-native-easy-grid": "^0.2.2",
     "react-native-elements": "^1.2.7",
@@ -28,10 +30,12 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.3.0",
+    "react-native-search-bar": "^3.5.1",
     "react-native-select-input-ios": "^2.0.5",
+    "react-native-settings-page": "^2.0.6",
     "react-native-tab-view": "^2.13.0",
     "react-native-tiny-toast": "^1.0.7",
-    "react-native-vector-icons": "^6.6.0",
+    "react-native-vector-icons": "^6.7.0",
     "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
