--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.3.0",
+    "react-native-scrollable-tab-view": "^1.0.0",
     "react-native-search-bar": "^3.5.1",
     "react-native-select-input-ios": "^2.0.5",
     "react-native-settings-page": "^2.0.6",
     "react-native-tab-view": "^2.13.0",
     "react-native-tiny-toast": "^1.0.7",
+    "react-native-underline-tabbar": "^1.3.6",
     "react-native-vector-icons": "^6.7.0",
     "socket.io-client": "^2.3.0"
   },
