--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -81,6 +81,26 @@ project.ext.react = [
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
+project.ext.vectoricons = [
+    iconFontNames: [ 
+        'AntDesign.ttf', 
+        'Entypo.ttf', 
+        'EvilIcons.ttf', 
+        'Feather.ttf', 
+        'FontAwesome.ttf', 
+        'FontAwesome5_Brands.ttf', 
+        'FontAwesome5_Regular.ttf', 
+        'FontAwesome5_Solid.ttf', 
+        'Fontisto.ttf', 
+        'Foundation.ttf', 
+        'Ionicons.ttf', 
+        'MaterialCommunityIcons.ttf', 
+        'MaterialIcons.ttf', 
+        'Octicons.ttf', 
+        'SimpleLineIcons.ttf', 
+        'Zocial.ttf'
+     ]
+]
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
 /**
@@ -180,10 +200,10 @@ android {
 }
 
 dependencies {
-    implementation project(':react-native-svg')
+    //implementation project(':react-native-svg')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
-
+    compile project(':react-native-vector-icons')
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
         debugImplementation files(hermesPath + "hermes-debug.aar")
