--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "start": "npx react-native run-ios",
+    "start": "npx react-native run-android",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^3.0.1",
     "@react-native-community/masked-view": "^0.1.7",
+    "@react-native-community/toolbar-android": "0.1.0-rc.2",
     "@react-navigation/bottom-tabs": "^5.1.1",
     "@react-navigation/drawer": "^5.1.1",
     "@react-navigation/material-top-tabs": "^5.1.1",
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/stack": "^5.1.1",
+    "babel-preset-react-native": "^2.1.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-animatable": "^1.3.3",
