--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "start": "npx react-native run-android",
+    "start": "npx react-native run-ios",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^3.0.1",
     "@react-native-community/masked-view": "^0.1.7",
+    "@react-native-community/toolbar-android": "0.1.0-rc.2",
     "@react-navigation/bottom-tabs": "^5.1.1",
     "@react-navigation/drawer": "^5.1.1",
     "@react-navigation/material-top-tabs": "^5.1.1",
@@ -47,7 +48,7 @@
     "@react-native-community/eslint-config": "^0.0.5",
     "@types/react-native-vector-icons": "^6.4.5",
     "babel-jest": "^24.9.0",
-    "eslint": "^6.5.1",
+    "eslint": "^6.8.0",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.0",
     "react-test-renderer": "16.9.0"
