--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -202,7 +202,7 @@ android {
 dependencies {
     //implementation project(':react-native-svg')
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation "com.facebook.react:react-native:0.61.5"  // From node_modules
     compile project(':react-native-vector-icons')
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
